# pluralrules

./: CI_MIGRATION.md  Cargo.toml
.github/workflows/: ci.yml
cldr_pluralrules_parser/: Cargo.toml
cldr_pluralrules_parser/benches/: parser.rs
cldr_pluralrules_parser/src/: parser.rs
intl_pluralrules/: Cargo.toml
intl_pluralrules/.cargo/: config.toml
intl_pluralrules/benches/: pluralrules.rs
intl_pluralrules/src/: lib.rs  operands.rs  rules.rs
intl_pluralrules/tests/: operands.rs
make_pluralrules/: Cargo.toml
make_pluralrules/src/: main.rs
make_pluralrules/src/parser/: gen_pr.rs  gen_rs.rs  plural_category.rs
make_pluralrules/tests/fixtures/: cldr_pluralrules_33.rs  cldr_pluralrules_within_test.rs
